--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -2147,8 +2147,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS جهاز تصفية و تنقية المياه من 5 طبقات
-                                    للمنزل والمطبخ</a
+                                    >فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
