--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -2244,8 +2244,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >SWS جهاز تصفية و تنقية المياه من 5
-                                        طبقات للمنزل والمطبخ</span
+                                        >فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام</span
                                     >
                                 </div>
                             </li>
@@ -2352,8 +2351,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                SWS جهاز تصفية و تنقية المياه من 5 طبقات للمنزل
-                                والمطبخ
+                            فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام
                             </h2>
 
                             <p class="text-gray-500">
@@ -2661,8 +2659,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                SWS جهاز تصفية و تنقية المياه من 5 طبقات للمنزل
-                                والمطبخ
+                            فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -2918,8 +2915,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS جهاز تصفية و تنقية المياه من 5 طبقات
-                                    للمنزل والمطبخ</a
+                                    >فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
