--- a/store.html
+++ b/store.html
@@ -2044,8 +2044,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                SWS جهاز تصفية و تنقية المياه من
-                                                5 طبقات للمنزل والمطبخ
+                                            فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام
                                             </h2>
                                         </div>
                                         <p
@@ -2661,8 +2660,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS جهاز تصفية و تنقية المياه من 5 طبقات
-                                    للمنزل والمطبخ</a
+                                    >فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
