--- a/index.html
+++ b/index.html
@@ -1606,8 +1606,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                SWS جهاز تصفية و تنقية المياه من
-                                                5 طبقات للمنزل والمطبخ
+                                            فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام
                                             </h2>
                                         </div>
                                         <p
@@ -1986,8 +1985,7 @@
                                 <a
                                     href="./SWSWaterPurifier.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >SWS جهاز تصفية و تنقية المياه من 5 طبقات
-                                    للمنزل والمطبخ</a
+                                    >فلتر تصفية وتنقية المياه من 5 طبقات للمنزل والمطبخ والحمام</a
                                 >
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
