--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -2090,9 +2090,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >فلتر الماء الدوار 360 المتطور لتنقية
-                                        ماء الصنبور وتوفير المياه أداة غسل يدوية
-                                        دوارة- تمديد الصنبور</span
+                                        >فلتر صنبور دوار قابل للتمديد 360 درجة</span
                                     >
                                 </div>
                             </li>
@@ -2430,9 +2428,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء فلتر الماء الدوار 360 المتطور لتنقية
-                                ماء الصنبور وتوفير المياه أداة غسل يدوية دوارة-
-                                تمديد الصنبور
+                                قم بشراء فلتر صنبور دوار قابل للتمديد 360 درجة
                             </h1>
 
                             <p class="mt-6 max-w-xl">
