--- a/index.html
+++ b/index.html
@@ -1667,10 +1667,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold"
                                             >
-                                                فلتر الماء الدوار 360 المتطور
-                                                لتنقية ماء الصنبور وتوفير المياه
-                                                أداة غسل يدوية دوارة- تمديد
-                                                الصنبور
+                                            فلتر صنبور دوار قابل للتمديد 360 درجة
                                             </h2>
                                         </div>
                                         <p
