--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1930,8 +1930,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء صنبور تسخين الماء 
-                                الفوري للمطبخ والحمامن،
+                            قم بشراء صنبور تسخين الماء الفوري للمطبخ والحمام
                                 
                             </h1>
 
