--- a/store.html
+++ b/store.html
@@ -2242,7 +2242,7 @@
                                             tabindex="0"
                                             class="focus:outline-none text-xs text-gray-600 mt-2"
                                         >
-                                            360 درجة الدورية صنبور تصفية المياه
+                                            فلتر صنبور صغير دوار 360 درجة
                                             لتنقية المياه صنبور توفير المياه
                                             الناشر اكسسوارات المطبخ محول تصفية
                                             المياه
