--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -1890,7 +1890,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >360 درجة الدورية صنبور تصفية المياه
+                                        >فلتر صنبور صغير دوار 360 درجة
                                         لتنقية المياه صنبور توفير المياه الناشر
                                         اكسسوارات المطبخ محول تصفية المياه</span
                                     >
@@ -1947,10 +1947,8 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                360 درجة الدورية صنبور تصفية المياه لتنقية
-                                المياه صنبور توفير المياه الناشر اكسسوارات
-                                المطبخ محول تصفية المياه
-                            </h2>
+                                فلتر صنبور صغير دوار 360 درجة
+                                لتنقية مياه الصنبور وتوفير المياه للمطبخ                           </h2>
 
                             <p class="text-gray-500">
                                 <b>وصف:</b>
@@ -2127,7 +2125,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء 360 درجة الدورية صنبور تصفية المياه
+                                قم بشراء فلتر صنبور صغير دوار 360 درجة
                                 لتنقية المياه صنبور توفير المياه الناشر
                                 اكسسوارات المطبخ محول تصفية المياه
                             </h1>
@@ -2215,7 +2213,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="360 درجة الدورية صنبور تصفية المياه لتنقية المياه صنبور توفير المياه الناشر اكسسوارات المطبخ محول تصفية المياه"
+                                                value="360 فلتر صنبور صغير دوار 360 درجة لتنقية المياه صنبور توفير المياه الناشر اكسسوارات المطبخ محول تصفية المياه"
                                                 disabled
                                             />
                                         </div>
