--- a/store.html
+++ b/store.html
@@ -2234,8 +2234,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                360 درجة الدورية صنبور تصفية
-                                                المياه
+                                            فلتر صنبور صغير دوار 360 درجة
                                             </h2>
                                         </div>
                                         <p
