--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -1787,7 +1787,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >منقي مياه الزجاجة</span
+                                        >قنينة لتنقية المياه</span
                                     >
                                 </div>
                             </li>
@@ -1868,7 +1868,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                منقي مياه الزجاجة
+                            قنينة لتنقية المياه
                             </h2>
 
                             <p class="text-gray-500">
@@ -1972,7 +1972,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء منقي مياه الزجاجة
+                                قم بشراء قنينة لتنقية المياه  
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -2058,7 +2058,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="منقي مياه الزجاجة"
+                                                value="قنينة لتنقية المياه "
                                                 disabled
                                             />
                                         </div>
