--- a/store.html
+++ b/store.html
@@ -2356,7 +2356,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                منقي مياه الزجاجة
+                                            قنينة لتنقية المياه  
                                             </h2>
                                         </div>
                                         <p
