--- a/store.html
+++ b/store.html
@@ -2425,7 +2425,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                فلتر مياه صنبور صغير
+                                            جهاز تصفية و تنقية المياه من 7 طبقات للمنزل والمطبخ والحمام
                                             </h2>
                                         </div>
                                         <p
