--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1733,7 +1733,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >فلتر مياه صنبور صغير</span
+                                        >جهاز تصفية و تنقية المياه من 7 طبقات للمنزل والمطبخ والحمام</span
                                     >
                                 </div>
                             </li>
@@ -1814,7 +1814,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                فلتر مياه صنبور صغير
+                            جهاز تصفية و تنقية المياه من 7 طبقات للمنزل والمطبخ والحمام
                             </h2>
 
                             <p class="text-gray-500">
@@ -1891,7 +1891,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء فلتر مياه صنبور صغير
+                                قم بشراء جهاز تصفية و تنقية المياه من 7 طبقات للمنزل والمطبخ والحمام
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -1977,7 +1977,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="فلتر مياه صنبور صغير"
+                                                value="جهاز تصفية و تنقية المياه من 7 طبقات للمنزل والمطبخ والحمام"
                                                 disabled
                                             />
                                         </div>
