--- a/UniversalRoboticArmFaucet.html
+++ b/UniversalRoboticArmFaucet.html
@@ -1789,7 +1789,7 @@
                                     </svg>
                                     <span
                                         class="ml-1 text-sm font-medium text-blue-600 md:ml-2"
-                                        >حنفية ذراع روبوتية عالمية</span
+                                        >الصنبور الدوار العالمي 1080 درجة</span
                                     >
                                 </div>
                             </li>
@@ -1870,7 +1870,7 @@
                             <h2
                                 class="mb-6 leading-tight tracking-wide font-bold text-gray-800 text-2xl md:text-3xl"
                             >
-                                حنفية ذراع روبوتية عالمية
+                            الصنبور الدوار العالمي 1080 درجة
                             </h2>
 
                             <p class="text-gray-500">
@@ -1970,7 +1970,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                قم بشراء حنفية ذراع روبوتية عالمية
+                                قم بشراء الصنبور الدوار العالمي 1080 درجة
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -2056,7 +2056,7 @@
                                                 id="product_ar"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="حنفية ذراع روبوتية عالمية"
+                                                value="الصنبور الدوار العالمي 1080 درجة"
                                                 disabled
                                             />
                                         </div>
