--- a/store.html
+++ b/store.html
@@ -2553,7 +2553,7 @@
                                                 tabindex="0"
                                                 class="focus:outline-none text-lg font-semibold product-title"
                                             >
-                                                حنفية ذراع روبوتية عالمية
+                                            الصنبور الدوار العالمي 1080 درجة   
                                             </h2>
                                         </div>
                                         <p
