--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1958,7 +1958,7 @@
                                 class="mx-auto w-full overflow-hidden bg-white px-8 py-10 shadow-2xl lg:max-w-2xl"
                             >
                                 <h1 class="text-2xl font-medium text-gray-700">
-                                    الشخصية ال
+                                    المعلومات الشخصية
                                 </h1>
 
                                 <form
