--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -2375,7 +2375,7 @@
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 210
+                                             210 Dhs
                                         </span>
                                         <div class="md:pl-6">
                                             <p
