--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -410,7 +410,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 159.99</span
+                                            >159.99 Dhs</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1387,7 +1387,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 159.99</span
+                                            >159.99 Dhs</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -2370,7 +2370,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 159.99</span
+                                            >159.99 Dhs</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
