--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -384,18 +384,18 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 59,99</span
+                                            >59,99 Dhs</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
                                         >
-                                            Dhs 80
+                                           80 Dhs
                                         </span>
                                         <div class="md:pl-6">
                                             <p
                                                 class="text-yellow-500 text-sm font-semibold"
                                             >
-                                                Save 10%
+                                                Save 30%
                                             </p>
                                             <p class="text-gray-400 text-sm">
                                                 Inclusive of all Taxes.
