--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -422,6 +422,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Faucet Filter</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
