--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -425,6 +425,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Filter</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
