--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -423,6 +423,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Tape</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
