--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -438,6 +438,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Heater</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
