--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -485,6 +485,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Faucet</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
