--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -473,7 +473,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Faucet Filter</li>
-                                    <li>shipping charges</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
