--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -452,6 +452,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Bottle</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
