--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -448,6 +448,7 @@
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Purifier</li>
+                                    <li>Shipping charges</li>
                                 </ol>
                             </div>
                         </div>
