--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -448,7 +448,7 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    Included in Package
+                                    Price includes
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Water Bottle</li>
