--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -2288,10 +2288,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    الحزمة تشمل
+                                     السعر يشمل
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x مصفي مياه</li>
+                                    <li>رسوم الشحن</li>
                                 </ol>
                             </div>
                         </div>
