--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -1951,10 +1951,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    الحزمة تشمل
+                                    السعر يشمل 
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x زجاجة</li>
+                                    <li>رسوم الشحن</li>
                                 </ol>
                             </div>
                         </div>
