--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -1870,10 +1870,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    الحزمة تشمل
+                                    السعر يشمل 
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x مصفي مياه</li>
+                                    <li>رسوم الشحن</li>
                                 </ol>
                             </div>
                         </div>
