--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -1220,10 +1220,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    Emballage inclus
+                                    Prix inclut
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x filtre de robinet</li>
+                                    <li>Livraison Frais</li>
                                 </ol>
                             </div>
                         </div>
