--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -1422,10 +1422,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    Emballage inclus
+                                    Prix inclut
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x Purificateur d'eau</li>
+                                    <li>Livraison Frais</li>
                                 </ol>
                             </div>
                         </div>
