--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -1170,10 +1170,11 @@
                                 <h3
                                     class="mb-6 font-bold text-gray-800 text-lg"
                                 >
-                                    Emballage inclus
+                                    Prix inclut
                                 </h3>
                                 <ol class="list-disc pl-8">
                                     <li>1 x chauffe-eau</li>
+                                    <li>Livraison Frais</li>
                                 </ol>
                             </div>
                         </div>
