--- a/TanklessInstantElectricWaterHeaterFaucet.html
+++ b/TanklessInstantElectricWaterHeaterFaucet.html
@@ -400,7 +400,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 299,99</span
+                                            >Out of Stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1136,7 +1136,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 299,99</span
+                                            >Rupture de stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1876,7 +1876,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 299,99</span
+                                            >إنتهى من المخزن</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
