--- a/360DegreeRotatingFaucetWaterFilter.html
+++ b/360DegreeRotatingFaucetWaterFilter.html
@@ -384,7 +384,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >59,99 Dhs</span
+                                            >Out of Stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1186,7 +1186,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 59,99</span
+                                            >Rupture de stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1989,7 +1989,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 59,99</span
+                                            >إنتهى من المخزن</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
