--- a/BottleWaterPurifier.html
+++ b/BottleWaterPurifier.html
@@ -414,7 +414,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs
+                                            >Out of Stock
                                         </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1166,7 +1166,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs
+                                            >Rupture de stock
                                         </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1918,7 +1918,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs
+                                            >إنتهى من المخزن
                                         </span>
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
