--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -385,7 +385,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 85,00</span
+                                            >Out of Stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1110,7 +1110,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 85,00</span
+                                            >Rupture de stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1832,7 +1832,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 85,00</span
+                                            >إنتهى من المخزن</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
