--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -387,7 +387,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 199,99</span
+                                            >Out of Stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1112,7 +1112,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 199,99</span
+                                            >Rupture de stock</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
@@ -1837,7 +1837,7 @@
                                     >
                                         <span
                                             class="font-bold text-gray-800 text-2xl mr-1"
-                                            >Dhs 199,99</span
+                                            >إنتهى من المخزن</span
                                         >
                                         <span
                                             class="font-bold text-gray-600 text-lg line-through"
