--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -7,6 +7,23 @@
         <script src="./talwind.js"></script>
         <script src="./alpinejs.min.js" defer></script>
         <link rel="stylesheet" href="./style.css" />
+        <!-- Meta Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '484141343872331');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=484141343872331&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     </head>
     <body>
         <div class="flex justify-center absolute left-0 right-0 lg:left-auto">
