sws add some specification

--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -700,6 +700,20 @@
                                         0.45 (KG)
                                     </dd>
                                 </div>
+                                <div
+                                    class="bg-gray-50 px-4 py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                                >
+                                    <dt
+                                        class="text-sm font-medium text-gray-500"
+                                    >
+                                        NB
+                                    </dt>
+                                    <dd
+                                        class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
+                                    >
+                                    Under high water pressure, the product tends to loosen and fall off
+                                    </dd>
+                                </div>
                             </dl>
                         </div>
                     </div>
@@ -1678,6 +1692,20 @@
                                         class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
                                     >
                                         0.45 (KG)
+                                    </dd>
+                                </div>
+                                <div
+                                    class="bg-gray-50 px-4 py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                                >
+                                    <dt
+                                        class="text-sm font-medium text-gray-500"
+                                    >
+                                        NB
+                                    </dt>
+                                    <dd
+                                        class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
+                                    >
+                                    Sous une pression d'eau élevée, le produit a tendance à se desserrer et à tomber
                                     </dd>
                                 </div>
                             </dl>
@@ -2660,6 +2688,20 @@
                                         class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
                                     >
                                         0.45 (كجم)
+                                    </dd>
+                                </div>
+                                <div
+                                    class="bg-gray-50 px-4 py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                                >
+                                    <dt
+                                        class="text-sm font-medium text-gray-500"
+                                    >
+                                        ملحوظة هامة
+                                    </dt>
+                                    <dd
+                                        class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
+                                    >
+                                    تحت ضغط عالي للماء المنتج قابل للتفكيك والسقوط
                                     </dd>
                                 </div>
                             </dl>
