--- a/SWSWaterPurifier.html
+++ b/SWSWaterPurifier.html
@@ -2701,7 +2701,7 @@
                                     <dd
                                         class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"
                                     >
-                                    تحت ضغط عالي للماء المنتج قابل للتفكيك والسقوط
+                                    تحت ضغط عالي للماء المنتج قابل للارتخاء والسقوط
                                     </dd>
                                 </div>
                             </dl>
