--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="./story.html"
                                 >Story</a
                             >
                         </div>
