--- a/story.html
+++ b/story.html
@@ -205,7 +205,7 @@
                             >
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="./story.html"
                                 >Story</a
                             >
                         </div>
