--- a/5LayerFaucetWaterFilter.html
+++ b/5LayerFaucetWaterFilter.html
@@ -1079,7 +1079,7 @@
                             >
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="./story.html"
                                 >Histoire</a
                             >
                         </div>
