--- a/story.html
+++ b/story.html
@@ -304,6 +304,10 @@ Half of the world’s population could be living in areas facing water scarcity 
 Some 700 million people could be displaced by intense water scarcity by 2030.
 By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely high water stress.
 
+This survey seeks to know the water problems and challenges in your area so that we can develop our services and products, we will be glad if you fill it, it will not take more than 5 min, thank you in advance.
+https://docs.google.com/forms/d/e/1FAIpQLSfOSHxZtCUw7sWRSTHpd3LrX6_MxbTyCvJSWT9RoTejX3L62A/viewform?vc=0&c=0&w=1&flr=0
+
+
                      </p>
                   
                     </div>
