--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="https://techmaa57.com/"
                                 >HomePage</a
                             >
                             <a
