--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./Agrilogy.html"
+                                >Agrilogy</a
+                            >
+                            <a
+                                class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./story.html"
                                 >Story</a
                             >
