--- a/index.html
+++ b/index.html
@@ -647,6 +647,11 @@
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >About us</a
                                 >
+                                <a
+                                    href="./Agrilogy.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >Agrilogy</a
+                                >
                             </div>
                         </div>
 
