--- a/store.html
+++ b/store.html
@@ -205,6 +205,11 @@
                             >
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./Agrilogy.html"
+                                >Agrilogy</a
+                            >
+                            <a
+                                class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./story.html"
                                 >Story</a
                             >
