--- a/story.html
+++ b/story.html
@@ -205,6 +205,11 @@
                             >
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./Agrilogy.html"
+                                >Agrilogy</a
+                            >
+                            <a
+                                class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./story.html"
                                 >Story</a
                             >
@@ -362,6 +367,11 @@ By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely 
                                     href="#about-us"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >About us</a
+                                >
+                                <a
+                                    href="./Agrilogy.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >Agrilogy</a
                                 >
                             </div>
                         </div>
