--- a/store.html
+++ b/store.html
@@ -877,6 +877,11 @@
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >Agrilogy</a
                                 >
+                                <a
+                                    href="./GoBlue.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >GoBlue</a
+                                >
                             </div>
                         </div>
 
