--- a/story.html
+++ b/story.html
@@ -210,6 +210,11 @@
                             >
                             <a
                                 class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./GoBlue.html"
+                                >GoBlue</a
+                            >
+                            <a
+                                class="transform text-gray-700 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./story.html"
                                 >Story</a
                             >
@@ -372,6 +377,11 @@ By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely 
                                     href="./Agrilogy.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >Agrilogy</a
+                                >
+                                <a
+                                    href="./GoBlue.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >GoBlue</a
                                 >
                             </div>
                         </div>
