--- a/Agrilogy.html
+++ b/Agrilogy.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/banner.jpg" alt="Second slide">
+                    <img class="second-slide" src="images/banner1.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <h1>TECHMAA Start-up</h1>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Third slide">
+                    <img class="third-slide" src="images/banner2.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <h1>TECHMAA Start-up</h1>
