--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./service.html"
+                                >Service</a
+                            >
+                            <a
+                                class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="#about-us"
                                 >About us</a
                             >
@@ -648,6 +653,11 @@
                                     >Products</a
                                 >
                                 <a
+                                    href="./service.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >Service</a
+                                >
+                                <a
                                     href="#about-us"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >About us</a
@@ -880,6 +890,11 @@
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./store.html"
                                 >Boutique</a
+                            >
+                            <a
+                                class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./service.html"
+                                >Service</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -1323,6 +1338,11 @@
                                     href="./store.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >Des produits</a
+                                >
+                                <a
+                                    href="./service.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >Service</a
                                 >
                                 <a
                                     href="#À propos de nous"
