--- a/index.html
+++ b/index.html
@@ -1572,6 +1572,11 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
+                                href="./service.html"
+                                >خدمة</a
+                            >
+                            <a
+                                class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="#عنا"
                                 >عنا</a
                             >
@@ -2019,6 +2024,11 @@
                                     href="./store.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >منتجاتنا</a
+                                >
+                                <a
+                                    href="./service.html"
+                                    class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
+                                    >خدمة</a
                                 >
                                 <a
                                     href="#عنا"
