--- a/Service.html
+++ b/Service.html
@@ -186,7 +186,7 @@
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./service.html"
-                                >Service</a
+                                >Services</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
