--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./service.html"
-                                >Services</a
+                                >Service</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
